# json-validator

./: README.md  json-validator.cabal  stack.yaml
JSONTestSuite/: run_tests.py
JSONTestSuite/results/: logs.txt  parsing.html  parsing_pruned.html
JSONTestSuite/test_parsing/: n_array_colon_instead_of_comma_no_ws.json  n_array_missing_value_no_ws.json  n_object_bad_value_no_ws.json  n_object_bracket_key_no_ws.json  n_object_comma_instead_of_colon_no_ws.json  n_object_key_with_single_quotes_no_ws.json  n_object_missing_colon_no_ws.json  n_object_unquoted_key_no_ws.json  n_object_with_single_string_no_ws.json  n_structure_comma_instead_of_closing_brace_no_ws.json  n_structure_object_with_trailing_garbage_no_ws.json  n_structure_open_array_object_no_ws.json  y_array_heterogeneous_no_ws.json  y_object_escaped_null_in_key_no_ws.json  y_object_extreme_numbers_no_ws.json  y_object_string_unicode_no_ws.json
app/: Main.hs
dump-state-machine/: Main.hs
json-test/: Main.hs
src/: Automaton.hs
