name:                json-validator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/json-validator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Automaton
  ghc-options:         -ddump-simpl -ddump-stg -ddump-cmm -ddump-to-file -O2 -ticky -ticky-allocd
  build-depends:       base >= 4.7 && < 5
    , bytestring
    , containers
    , mtl
    , text
    , word8
    , array
  default-language:    Haskell2010

executable json-validator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-stg -ddump-simpl -ddump-cmm -ddump-to-file -O2 -ticky -ticky-allocd
  build-depends:       base
    , bytestring
    , text
    , json-validator
    , criterion
    , aeson
    , parallel
  default-language:    Haskell2010

executable dump-state-machine
  hs-source-dirs:      dump-state-machine
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
    , json-validator
  default-language:    Haskell2010
